# FLASKPROJECT

./: main.py  pyproject.toml
statik/: style.css
templates/: add_menu.html  index.html  menu.html  order.html  results.html
