[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["Dima2009-crupto <dimaparoldima1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
